public/css/style.css
/* ... */
#CL_landingpage_jumbotron p {
    font-size:10px;
    font-weight: normal;
}
#CL_landingpage_jumbotron h2 {
    font-size: 13px;
    font-weight: normal;

}




.crowdluv_landingpage_memberlogin_box {
    
    /* max-width: 340px; */
    max-height: 3000px;   /* no scrolling, just print all talent no matter how long it gets. */
    
}
.talentpagelisting {
    /*margin: 2%;*/
    display: inline-block;
    vertical-align: top;
    width:250px;


}
.talentpagelisting img {
    width:25%;
    float:left;
    margin-right: 5px;

}


.cl-full-width-row {
    /*white-space: nowrap;*/
    /*overflow-x: scroll;*/
    /*height:11em;*/
    width:103.5%;
    margin-left: -15px;
    /*padding-left:8.333%;*/
    
}


.cl-vscroll-card-container {
    /*overflow:scroll;
    overflow-y:scroll;
    overflow-x:hidden;
    *//*max-height:14em;*/
    /*text-align: center;*/
    padding: 0 1%;
    margin: 0 2.333%;


}


.cl-talent-listing-card-container-single-row {
    white-space: nowrap;
    overflow-x: scroll;
    height:11em;
    /*width:103.5%;*/
    /*margin-left: -15px;*/
    margin: 0 8.333%;

    
}

.cl-talent-listing-card {
    
    width: 22em;
    height: 6.25em;
    margin-right: .6em;
    margin-bottom: .6em;

    display: inline-block;
    vertical-align: top;
    position:relative;

    
}

.cl-talent-listing-card .talent-avatar {
    /*width:50%;
    height:60%;*/
    display: inline-block;
    /*margin-right: 5px;*/

}
.cl-talent-listing-card .talent-avatar img {
    /*width:75%;  */
    height: 6.25em;
}

.cl-talent-listing-card .talent-name {
    white-space: normal;  
    font-size: 1em;
    font-weight: bold;
}


.cl-talent-listing-card .card-info {
    width:45%;
    height:60%;
    display: inline-block;
    vertical-align: top;

    
}
.cl-talent-listing-card .card-info img {
    /*width:50%;*/
    /*padding: .8em 0;*/

}


.cl-talent-listing-card .extra-info {
    
    text-decoration: none;
    position: absolute;
    bottom:0;
    width: 100%;
}



.cl-talent-share-listing-card-square {
    margin-right: 0;
    width: 18em;
    height: 6.57em;

}
.cl-talent-share-listing-card-square .talent-avatar {
    width:25%;

}
.cl-talent-share-listing-card-square .talent-avatar img {
    width:85%;  
}
.cl-talent-share-listing-card-square .card-info {
    width:70%;
     
}
.cl-talent-share-listing-card-square .card-info img {
    padding: 0;
    padding-bottom:  .25em ;
     
}









/* For some reason, the facebook social login loads in an iframe that is 1000px 
height if the user is currently logged into facebook as a page rather than as a user
This selector overrides that to limit the height */
.crowdluv_landingpage_memberlogin_box .fb_iframe_widget iframe {
    height: 60 !important;

}

.cldefaulttable {    
    margin-bottom: 3px;
    display:inline-block;
    font-size: 12px;
}
.cldefaulttable tr {
    border: 1px solid #E7E5E6;
    background: #fff;
    
}
.cldefaulttable td {
    padding: 5px 5px;
    border: 1px solid #E7E5E6;
}

.cl_cell {
    display:inline-block;
    margin-bottom: .555%;
    padding: .555%;
    border: 1px solid #E7E5E6;
    background: #fff;

}


input[type="submit"], button {
    text-align: center;
    border: 1px solid #717171;
    background: radial-gradient(ellipse farthest-corner, rgb(255, 255, 255), rgb(243, 240, 240) 80%, #DEDFE0 90%, white);
    color: #464646;
    -webkit-border-radius: 2px;
    border-radius: 4px;    
    font-size: 9px;
   
    padding: .555%;
}



.talent_landingpage_hero{
    /*max-width:100%;*/
    padding: 0 0 3px 0;
    /*margin: 0px 0px 10px 1px; */
    margin: 0px -15px 10px -15px;
    height: 225px; 
    background-color: #f0eeed;
    background-image: url('../crowdluvdata/talent_landingpage_images/default.jpg');
    background-position:  center top;
    background-repeat: no-repeat;
    background-size: auto 225px;  /* Fixed height for all viewscreens, set the width accordingly */

}

/*.talent_landingpage_hero {

width: 110%;
padding: 0;
margin: 0px 0px 10px -25px;
min-height: 205px;
background-color: #f0eeed;
background-image: url('../crowdluvdata/talent_landingpage_images/default.jpg');
background-position: center top;
background-repeat: no-repeat;
background-size: contain;
}*/


.talent_landingpage_talentmessagesection {
    
    background: #D9D7DA;
    font-size: 10px;
    padding-top: .5555%;
    padding-bottom: .3%;
    color: black;
    margin-top: 1.111%;

    
}
    .talent_landingpage_talentmessagesection h1 {
        font-size: 14px;
        font-style: bold;
        color: black;
        margin-bottom:10px;

    }

.talent_landingpage_whathappens_section {
    
    background: #C1C1C3;
    font-size: 10px;    
    color: black;
    
}
    .talent_landingpage_whathappens_section h1 {
        font-size: 14px;
        font-style: bold;
        color: black;
        margin-bottom:10px;

    }
   .talent_landingpage_whathappens_section p {
        margin-bottom:10px;

    }




#CL_topfollower_googlemap {

    height:625px;
    padding:1.1111%;

}
.centerdiv {

    margin-left:auto;
    margin-right:auto;

}

.cl-textcolor-standout, .cl-text-standout, .clredtext, a {
    color:darkred;
}

.cl-button-standout, .clredbutton {
    background: darkred;
    padding: 10px 40px;
    color: white;

}
.cl-button-standout-narrow, .clredbutton {
    background: darkred;
    padding: 10px 10px;
    color: white;
}

.cl-button-standout:hover, .cl-button-standout-narrow:hover, .clredbutton {
    background: red;
}

.cl-button-standout:disabled, .clredbutton:disabled {
    background: gray;
}



.cl-textcolor-default {
    color: #383839;
}

.cl-text-muted {
    color: gray;

}
.cl-textcolor-subtle-standout {
    color: #4B0082;
}


.cl-panel-vscroll {

    overflow:scroll;

}

.cl-panel-tall-height {
    height: 20.75em;
    
}
.cl-panel-medium-height {
    height: 14em;
    
}
.cl-panel-short-height {
    height: 8em;
    
}
/* ... */

